Added commands for autogeneration of trace and log messages.
CMD+0 will generate Logger.log( followed by the class name and method name. If a 
variable is selected the generation will be: Logger.log("ClassName > MethodName 
> foo" + foo);

CMD+SHIFT+0 will do the same thing with the only difference of using "trace" 
instead of "Logger.log".

If you think Logger.log/Trace sucks big time, change to whatever you'd like in 
the Log or Trace - Selection commands (e.g. MyLog.log)

--- a/info.plist
+++ b/info.plist
@@ -296,6 +296,8 @@
 		<string>DEA9BFA0-B7E4-4860-8FA4-E00A2A4C2A99</string>
 		<string>E803B4A4-2B80-4BD1-8154-DEF3B90345F4</string>
 		<string>997A416B-40F3-4BDB-B33A-6B8D9C9220EC</string>
+		<string>A989F8DD-B5FB-497B-8554-1AC05C0ACDD8</string>
+		<string>B3C64ECD-97E7-4B25-8402-86A2B9BBDD95</string>
 	</array>
 	<key>uuid</key>
 	<string>97CE49E1-D900-402D-BFB7-FC3B28458393</string>
