--- a/info.plist
+++ b/info.plist
@@ -282,6 +282,7 @@
 		<string>0DFD0813-F534-4A15-AA77-B4FD3E9E14B6</string>
 		<string>03781259-08B5-4C84-9AEB-A335A736789C</string>
 		<string>A2BB1829-9FFF-426C-B16A-7CF3F671744F</string>
+		<string>5B32841F-9D2C-4594-8495-F820D31146EF</string>
 		<string>965F7929-C217-45FC-9EFD-7EE9CB94D4F8</string>
 		<string>28790E89-861F-47A4-B89E-A674D4559EDE</string>
 		<string>46DA2BE6-AAF8-4785-8EDA-2C5F9A39F211</string>
